Implemented floating buttons for Create a Lecture and Create a Class.

--- a/testcode/templates/student-home.html
+++ b/testcode/templates/student-home.html
@@ -119,14 +119,12 @@
                 <div id="leftclasses" >
                       
                       
-                    <div id="classes">
-                        
-                        <ul class="breadcrumb" id="rightm">
-                            <li>Your classes                            
-                           <div class="btn-group in" id="rightm"> <button class="btn add-classstudent" type="button" id="add-class" ><i class="icon-book" ></i> Add class</button> </div></li>                               
-                           
-                        </ul>
-                        
+                    <div class="classe">
+                      
+                      <div class="margins"> Your classes </div>                           
+                          
+
+                        <div class="btn-group in rightm"> <button class="btn" type="button" id="add-class" ><i class="icon-book" ></i> Add class</button> </div>
                     </div>
                     
                     <div id="listclass">
