--- a/testcode/templates/teacher-lecture.html
+++ b/testcode/templates/teacher-lecture.html
@@ -150,13 +150,16 @@
                                  
              
         <div id="container1">
-            <div id="leftclasses" >
+              
+       <div id="leftclasses" >
               <div class="classe">
                       
-                      <div class="margins"> Your classes </div> 
-                      <div class="btn-group in rightm">   
-                           <button class="btn " type="button" id="create-class"> <i class="icon-pencil"></i> Create a class</button> </div>                        
-                       
+                      <div class="margins"> Your classes </div>    
+
+                       <div class="btn-group in rightm">              
+                            <button class="btn " type="button" id="create-class"> <i class="icon-pencil"></i> Create a class</button> 
+                       </div>
+                        
                     </div>
                     
                     <div id="listclass">
