--- a/testcode/static/text.css
+++ b/testcode/static/text.css
@@ -229,10 +229,10 @@ table#table2
 .classes
 {
     position: relative;
-    height: 25px;
+    height: 35px;
     line-height: 25px;
-    background-image: url(bar.png);
-    width:100%;
+    background-color: #f5f5f5;
+    width:850pc;
     text-align: center;
     color: white;
     
@@ -350,15 +350,25 @@ width:270px;
 {
     line-height:25px; 
 }
-#classes
+
+.margins
 {
-    position: relative;
+  margin-top: 7px;
+  margin-left: 8px;
+  float:left;
+}
+
+.classe
+{
+     padding: 5px;
+      position: relative;
     width: 265x;
-    height: 25px;
+    height: 30px;
     text-align: left;
     font-weight: 900;
     margin-right:0px !important;  
-    margin-bottom:25px;  
+    margin-bottom:15px;  
+    background-color: #f5f5f5;
     
 }
 
@@ -375,11 +385,16 @@ width:270px;
 }
 
 
-#rightm
+.rightm
 {
-  
+ float:right; 
+
 }
 
+#leftm
+{
+  float:left;
+}
 .add-classstudent
 {
   margin-left:560px; 
