--- a/testcode/templates/student-home.html
+++ b/testcode/templates/student-home.html
@@ -48,7 +48,7 @@
   <body>
                 
         <div id="dialog-formaddclass" title="Add class">
- 
+        <p id="addclass_message_box"></p>
              <form>
                 <fieldset>
                     <label for="name">Class ID</label>
@@ -78,7 +78,7 @@
                   
                     <div class="navbar smalle">
                         <div class="navbar-inner">
-                               <a class="brand" href="#">Hi, Andrei Ivanov</a>
+                               <a class="brand" href="#">Hi, {{ user.name}}</a>
                          </div>
                         </div>
                                <ul class="nav">
@@ -124,29 +124,50 @@
                       <div class="margins"> Your classes </div>                           
                           
 
-                        <div class="btn-group in rightm"> <button class="btn" type="button" id="add-class" ><i class="icon-book" ></i> Add class</button> </div>
+                        <div class="btn-group in rightm"> <button class="btn" type="button" id="add-class" ><i class="icon-book" ></i> Add a class</button> </div>
                     </div>
                     
                     <div id="listclass">
                         
-                        <ul class="nav nav-tabs nav-stacked">
-                            <li><a href="#">6.01 Introduction to EECS I</a></li>
-                            <li><a href="#">6.006 Introduction to Algorithms</a></li>
+                        {% if isNewUser %}
+                             <div id="shit"> <p class="empty"> You have no classes added. Use "Add a class" button </p> </div> 
+                             <ul class="nav nav-tabs nav-stacked" id="classlist">                           
+                            
+                            </ul>
+                        {% else %}
+                        
+                        <ul class="nav nav-tabs nav-stacked" id="classlist">
+                            
+                            {% for course in courses %}                                 
+
+                                <li id="{{course.course_id}}" class="classlinks"><a href="#">{{ course.name }}</a></li>
+                                                       
+                            {% endfor %}
+                            
                         </ul>
+                            
+                         {% endif %}
                             
                     </div>
                     
                      <div id="rightclass">
+                        {% if isNewUser %}
+                             <table border="0" id="problemstable">
+                                                        
+                            </table>
+                        {% else %}
                          <table border="0" id="problemstable">
-                             <tr>                                 
-                                 <td>4 problems</td>
-                                 <td style="color:red; font-weight: 800">2 unsolved problems</td>
+                            {% for problem in problems %}  
+                            
+                            <tr> 
+                                 <td >{{problem.0}} problems</td>
+                                 <td >{{problem.1}} unsolved problems</td>
                             </tr>
-                            <tr>                                 
-                                 <td>0 problems</td>
-                                 <td>0 unsolved problems</td>
-                            </tr>
+                             {% endfor %}
+                            
                          </table>
+                         
+                         {% endif %}  
                             
                      </div>
                    
