--- a/testcode/templates/Student.html
+++ b/testcode/templates/Student.html
@@ -114,8 +114,8 @@
                         <div id="path">
                             
                             <ul class="breadcrumb">
-                                <li><a href="#">6.01</a> <span class="divider">/</span></li>
-                                <li><a href="#">Lecture 8</a> <span class="divider">/</span></li>
+                                <li><a href="#">{{course.name}}</a> <span class="divider">/</span></li>
+                                <li><a href="#">Lecture {{lecture.lecture_id}}</a> <span class="divider">/</span></li>
                                 <li class="active">Centered average</li>
                             </ul>
                             
@@ -129,7 +129,7 @@
                                 <div id="subms">
                                     <div class="btn-group in"> <button class="btn changecode" type="button" id="previous"> <i class="icon-ok icon-chevron-left"></i> Previous</button> </div>
                                      Submissions
-                                     <div class="btn-group in"><button class="btn changecode" type="button" id="next" disabled>Next <i class="icon-ok icon-chevron-right"></i></button> </div>
+                                     <div class="btn-group in"><button class="btn changecode disabled" type="button" id="next" >Next <i class="icon-ok icon-chevron-right"></i></button> </div>
                                 </div>
                             </ul>
                             
